bugfix/ETSL-323 and  ETSL-421 added code changes to fix white shadow and arrow alignment.

--- a/ui.frontend/src/main/webpack/etisalat/styles/media_cta_section.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/media_cta_section.scss
@@ -12,7 +12,7 @@
         width: 100%;
         flex-wrap: wrap;
         flex-direction: row-reverse;
-        @include box-shadow();
+        @include media-box-shadow();
 
         @include sm {
             flex-direction: column-reverse;
